frontend/css/admin.css
/* ... */
 .topbar .dropdown-list .dropdown-item .text-truncate {
     max-width: 10rem;
}
 .topbar .dropdown-list .dropdown-item:active {
     background-color: #eaecf4;
     color: #3a3b45;
}
 @media (min-width: 576px) {
     .topbar .dropdown {
         position: relative;
    }
     .topbar .dropdown .dropdown-menu {
         width: auto;
         right: 0;
    }
     .topbar .dropdown-list {
         width: 20rem !important;
    }
     .topbar .dropdown-list .dropdown-item .text-truncate {
         max-width: 13.375rem;
    }
}
 .topbar.navbar-dark .navbar-nav .nav-item .nav-link {
     color: rgba(255, 255, 255, 0.8);
}
 .topbar.navbar-dark .navbar-nav .nav-item .nav-link:hover {
     color: #fff;
}
 .topbar.navbar-dark .navbar-nav .nav-item .nav-link:active {
     color: #fff;
}
 .topbar.navbar-light .navbar-nav .nav-item .nav-link {
     color: #d1d3e2;
}
 .topbar.navbar-light .navbar-nav .nav-item .nav-link:hover {
     color: #b7b9cc;
}
 .topbar.navbar-light .navbar-nav .nav-item .nav-link:active {
     color: #858796;
}
 .sidebar {
     width: 6.5rem;
     min-height: 100vh;
}
 .sidebar .nav-item {
     position: relative;
}
 .sidebar .nav-item:last-child {
     margin-bottom: 1rem;
}
 .sidebar .nav-item .nav-link {
     text-align: center;
     padding: 0.75rem 1rem;
     width: 6.5rem;
}
 .sidebar .nav-item .nav-link span {
     font-size: 0.65rem;
     display: block;
}
 .sidebar .nav-item.active .nav-link {
     font-weight: 700;
}
 .sidebar .nav-item .collapse {
     position: absolute;
     left: calc(6.5rem + 1.5rem / 2);
     z-index: 1;
     top: 2px;
}
 .sidebar .nav-item .collapse .collapse-inner {
     border-radius: 0.35rem;
     box-shadow: 0 0.15rem 1.75rem 0 rgba(58, 59, 69, 0.15);
}
 .sidebar .nav-item .collapsing {
     display: none;
     transition: none;
}
 .sidebar .nav-item .collapse .collapse-inner, .sidebar .nav-item .collapsing .collapse-inner {
     padding: .5rem 0;
     min-width: 10rem;
     font-size: 0.85rem;
     margin: 0 0 1rem 0;
}
 .sidebar .nav-item .collapse .collapse-inner .collapse-header, .sidebar .nav-item .collapsing .collapse-inner .collapse-header {
     margin: 0;
     white-space: nowrap;
     padding: .5rem 1.5rem;
     text-transform: uppercase;
     font-weight: 800;
     font-size: 0.65rem;
     color: #b7b9cc;
}
 .sidebar .nav-item .collapse .collapse-inner .collapse-item, .sidebar .nav-item .collapsing .collapse-inner .collapse-item {
     padding: 0.5rem 1rem;
     margin: 0 0.5rem;
     display: block;
     color: #3a3b45;
     text-decoration: none;
     border-radius: 0.35rem;
     white-space: nowrap;
}
 .sidebar .nav-item .collapse .collapse-inner .collapse-item:hover, .sidebar .nav-item .collapsing .collapse-inner .collapse-item:hover {
     background-color: #eaecf4;
}
 .sidebar .nav-item .collapse .collapse-inner .collapse-item:active, .sidebar .nav-item .collapsing .collapse-inner .collapse-item:active {
     background-color: #dddfeb;
}
 .sidebar .nav-item .collapse .collapse-inner .collapse-item.active, .sidebar .nav-item .collapsing .collapse-inner .collapse-item.active {
     color: #4e73df;
     font-weight: 700;
}
 .sidebar #sidebarToggle {
     width: 2.5rem;
     height: 2.5rem;
     text-align: center;
     margin-bottom: 1rem;
     cursor: pointer;
}
 .sidebar #sidebarToggle::after {
     font-weight: 900;
     content: '\f104';
     font-family: 'Font Awesome 5 Free';
     margin-right: 0.1rem;
}
 .sidebar #sidebarToggle:hover {
     text-decoration: none;
}
 .sidebar #sidebarToggle:focus {
     outline: none;
}
 .sidebar.toggled {
     width: 0 !important;
     overflow: hidden;
}
 .sidebar.toggled #sidebarToggle::after {
     content: '\f105';
     font-family: 'Font Awesome 5 Free';
     margin-left: 0.25rem;
}
 .sidebar.toggled .sidebar-card {
     display: none;
}
 .sidebar .sidebar-brand {
     height: 4.375rem;
     text-decoration: none;
     font-size: 1rem;
     font-weight: 800;
     padding: 1.5rem 1rem;
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 0.05rem;
     z-index: 1;
}
 .sidebar .sidebar-brand .sidebar-brand-icon i {
     font-size: 2rem;
}
 .sidebar .sidebar-brand .sidebar-brand-text {
     display: none;
}
 .sidebar hr.sidebar-divider {
     margin: 0 1rem 1rem;
}
 .sidebar .sidebar-heading {
     text-align: center;
     padding: 0 1rem;
     font-weight: 800;
     font-size: 0.65rem;
}
 .sidebar .sidebar-card {
     display: flex;
     flex-direction: column;
     align-items: center;
     font-size: 0.875rem;
     border-radius: 0.35rem;
     color: rgba(255, 255, 255, 0.8);
     margin-left: 1rem;
     margin-right: 1rem;
     margin-bottom: 1rem;
     padding: 1rem;
     background-color: rgba(0, 0, 0, 0.1);
}
 .sidebar .sidebar-card .sidebar-card-illustration {
     height: 3rem;
     display: block;
}
 .sidebar .sidebar-card .sidebar-card-title {
     font-weight: bold;
}
 .sidebar .sidebar-card p {
     font-size: 0.75rem;
     color: rgba(255, 255, 255, 0.5);
}
/* ... */

